@@ -3,17 +3,29 @@
         xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
         i18n_domain="eea">
 
-
     <genericsetup:upgradeSteps
-        source="7.6"
-        destination="8.1"
-        profile="eea.design:default">
+            source="*"
+            destination="8.5"
+            profile="eea.design:default">
 
         <genericsetup:upgradeDepends
-            title="Import all steps from eea.design profile upgrade 8.1"
-            description="Imports new eea.* css files"
-            import_profile="eea.design:upgrade81"
-            />
+                title="Import all steps from eea.design profile upgrade 8.5"
+                description="Imports new eea.* js files"
+                import_profile="eea.design:upgrade85"
+                />
+
+    </genericsetup:upgradeSteps>
+
+    <genericsetup:upgradeSteps
+            source="7.6"
+            destination="8.1"
+            profile="eea.design:default">
+
+        <genericsetup:upgradeDepends
+                title="Import all steps from eea.design profile upgrade 8.1"
+                description="Imports new eea.* css files"
+                import_profile="eea.design:upgrade81"
+                />
 
     </genericsetup:upgradeSteps>
 
@@ -23,11 +35,11 @@
             destination="7.6"
             profile="eea.design:default">
 
-    <genericsetup:upgradeDepends
-            title="Import all steps from eea.design profile upgrade 7.6"
-            description="Imports new eea.* css files"
-            import_profile="eea.design:upgrade76"
-            />
+        <genericsetup:upgradeDepends
+                title="Import all steps from eea.design profile upgrade 7.6"
+                description="Imports new eea.* css files"
+                import_profile="eea.design:upgrade76"
+                />
     </genericsetup:upgradeSteps>
 
     <genericsetup:upgradeSteps
